[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "led"
version = "0.1.0"
description = "Locchan's Event Daemon"
requires-python = ">=3.7"

[project.scripts]
led = "led.cli:main"
led_send = "led.led_send:main"

[tool.setuptools.packages.find]
include = ["led*"]
