[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "led"
version = "1.1.1"
description = "Locchan's Event Daemon"
requires-python = ">=3.7"
dependencies = [
    "requests"
]

[project.scripts]
led = "led.cli:main"
led_send = "led.led_send:main"

[tool.setuptools.packages.find]
include = ["led*"]
